2000-06-27  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-via-smtp): additional HELO for sendmail warning.

2000-06-25  Kenichi OKADA <okada@opaopa.org>

	* SLIM-VERION: Add code name.

2000-06-24  Kenichi OKADA <okada@opaopa.org>

	* mime-def.el (mime-library-product): Fix.

2000-06-24  Kenichi OKADA <okada@opaopa.org>

	* mime-def.el (mime-library-product): Up.

2000-06-23  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mmexternal.el (initialize-instance): New method.
	(mime-entity-name): Fixed.
	(mmexternal-require-buffer): New function.
	(mime-insert-entity): New implementation.
	(mime-write-entity): Likewise.
	(mime-entity-body): New method.
	(mime-insert-entity-body): New method.
	(mime-write-entity-body): New implementation.
	(mime-entity-content): Likewise.
	(mime-insert-entity-content): Likewise.
	(mime-write-entity-content): Likewise.
	(mime-entity-fetch-field): Likewise.
	(mime-insert-header): Likewise.

	* mmbuffer.el (initialize-instance): Store buffer instead of name
	of buffer to `buffer' slot.

2000-06-21  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mmgeneric.el (mime-entity-children): Deleted.

	* mmbuffer.el (mime-insert-entity-body): New method.
	(mmbuffer-parse-multipart): New function.
	(mmbuffer-parse-encapsulated): New function.
	(mime-entity-children): New function.

2000-06-21  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime.el (mime-find-root-entity): New function.
	(mime-entity-header-buffer): Comment out.
	(mime-goto-header-start-point): Likewise.
	(mime-entity-header-start-point): Likewise.
	(mime-entity-header-end-point): Likewise.
	(mime-entity-body-buffer): Likewise.
	(mime-goto-body-start-point): Likewise.
	(mime-goto-body-end-point): Likewise.
	(mime-entity-body-start-point): Likewise.
	(mime-entity-body-end-point): Likewise.
	(mime-entity-body-start): Likewise.
	(mime-entity-body-end): Likewise.
	(mime-entity-buffer): Likewise.
	(mime-entity-point-min): Likewise.